Constructed the Table in antd and added handleDelete function.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,25 +1,1 @@
-body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-}
-
-input, textarea {
-  padding: 0.5rem;
-  resize: none;
-}
-
-button {
-  cursor: pointer;
-  background-color: skyblue;
-  border: none;
-  padding: 0.5rem;
-  font-weight: bold;
-  border-radius: 0.5rem;
-}
+@import '~antd/dist/antd.css';
