Revised the MongoDB Schema and deleted extra files/folders.

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,9 @@
 @import '~antd/dist/antd.css';
 
+body {
+    background-color: #EFF2F5;
+}
+
 button {
     align-self: flex-end;
     max-width: 20rem;
